--- a/progetto/WebContent/Home2.css
+++ b/progetto/WebContent/Home2.css
@@ -1,55 +1,53 @@
-
 * {
-  box-sizing: border-box;
+	margin: 0px;
+  	box-sizing: border-box;
+  	font-family: "Comic Sans MS", Serif;
 }
 body {
-	font-family: "Comic Sans MS", Serif;
-	background: rgba(191, 0, 255, 0.4);
-	margin: 0;
-	overflox-x: hidden;
+	
 }
-
-/*.tickets {
-	margin-left: 20px;
-	background: gold;
-}
-.tickets h2 {
-	color: purple;
-	font-size: 32px;
-}*/
-
 /*Nav Bar*/
 
-
-.NavBar1 {
-	font-size: 16px;
-	list-style-type: none;
+nav {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	min-height: 7.5vh;
 	border-bottom: 1px solid black;
 	box-shadow: 2px 2px 15px black;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
+	overflow-y: hidden;
 	background-color: gold;
-	position: sticky;
-	top: 0;
-	left: 0;
 }
-.sinistra {
-	float: left;
-	border-right: 1px solid white;
-}
-.destra {
-	float: right;
-	margin-right: 20px;
-}
-li a {
-	display: block;
+.logo {
 	color: black;
-	text-align: center;
-	padding: 14px 25px;
-	text-decoration: none;
+	text-transform: uppercase;
+	font-weight: bold;
+	letter-spacing: 5px;
+	font-size: 26px;
 }
-li a:hover:not(.active) {
+.logo a {
+	text-decoration: none;
+	color: black;
+}
+.navBar {
+	display: flex;
+	justify-content: space-around;		
+	width: 40%;
+	}
+.navBar li {
+	list-style-type: none;
+}
+.navBar a {
+	color: black;
+	text-decoration: none;
+	text-align: center;
+	letter-spacing: 3px;
+	font-weight: bold;
+	padding: 15px 18px;
+	font-size: 13px;
+}
+.navBar a:hover:not(.active) {
+	transition-duration: 0.4s;
 	background-color: tomato;
 	color: white;
 }
@@ -57,13 +55,24 @@ li a:hover:not(.active) {
 	background-color: tomato;
 	color: white;
 }
+.burger {
+	display: none;
+	cursor: pointer;
+	}
+.burger div{
+	width: 25px;
+	height: 3px;
+	background-color: black;
+	margin: 5px;
+}
 
-.sticky {
+
+/*.sticky {
   position: fixed;
   top: 0;
   width: 100%;
 }
-/*
+
 .dropdown-content {
   display: none;
   position: absolute;
@@ -88,7 +97,7 @@ li a:hover:not(.active) {
   display: block;
 }
 
-/*COSE NavBar*/
+/*COSE navBar*/
 
 
 
@@ -141,34 +150,34 @@ li a:hover:not(.active) {
 }*/
 
 /*@media screen and (max-width: 750px) {
-  .NavBar1 .sinistra, .dropdown .dropbtn {
+  .navBar .sinistra, .dropdown .dropbtn {
     display: none;
   }
-  .NavBar1 a.icon {
+  .navBar a.icon {
     float: left;
     display: block;
   }
 }
 
 @media screen and (max-width: 750px) {
-  	.NavBar1.responsive {position: relative;}
-  	.NavBar1.responsive .icon {
+  	.navBar.responsive {position: relative;}
+  	.navBar.responsive .icon {
     	position: absolute;
     	border-right: 1px solid white;
     	left: 0;
     	top: 0;
   	}
-  	.NavBar1.responsive a.sinistra {
+  	.navBar.responsive a.sinistra {
     	float: none;
     	display: block;
     	text-align: center;
   	}
-  	.NavBar1.responsive a.destra {
+  	.navBar.responsive a.destra {
 		display:none;
 	}
-  	.NavBar1.responsive .dropdown {float: none;}
-  	.NavBar1.responsive .dropdown-content {position: relative;}
-  	.NavBar1.responsive .dropdown .dropbtn {
+  	.navBar.responsive .dropdown {float: none;}
+  	.navBar.responsive .dropdown-content {position: relative;}
+  	.navBar.responsive .dropdown .dropbtn {
     	display: block;
     	width: 100%;
     	text-align: center;
@@ -177,7 +186,7 @@ li a:hover:not(.active) {
 /*Foto giganti*/
 
 .galleria-foto-giganti {
-	margin-top: 1px;
+	margin-top: 10px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -185,6 +194,7 @@ li a:hover:not(.active) {
 	max-width: 100%;
 	height: auto;
 	display: block;
+	border: 2px solid purple;
 }
 .scritta-nella-foto {
 	text-align: center;	
@@ -201,11 +211,11 @@ li a:hover:not(.active) {
 .titolo-eventi-importanti{
 	font: 28px "Comic Sans MS", serif;
 	text-align: center;
-	background-color: tomato;
+	margin-top: 30px;
+	margin-bottom: 30px;
 }
 div.galleria-foto-eventi{
 	float: left;
-	background-color: tomato;
 }
 div.foto-eventi {
 	border: 1px solid #ccc;
@@ -231,16 +241,15 @@ div.foto-eventi img {
 
 .stadi-importanti {
 	margin: auto;
-	
 }
 .titolo-stadi-importanti {
 	font: 28px "Comic Sans MS", serif;
 	text-align: center;
-	background-color:yellow;
+	margin-top: 30px;
+	margin-bottom: 30px;
 }
 div.galleria-foto-stadi {
 	float: left;
-	background-color:yellow;
 }
 div.foto-stadi {
 	border: 1px solid #ccc;
@@ -264,11 +273,9 @@ div.desc {
 /*Footer*/
 
 .footer {
-	background-color: purple;
 	text-align: center;
 	margin-right: auto;
 	margin-left: auto;
-	color: white;
 }
 
 
@@ -298,14 +305,15 @@ div.desc {
 
 .biglietti {
 	margin: auto;
+	margin-top: 30px;
 }
 .titolo-biglietti {
 	text-align: center;
 }
-#bigliettitable td, #bigliettitable th {
+#biglietti td, #biglietti th {
 	border: 1px solid grey;
 }
-#bigliettitable td:hover {
+#biglietti td:hover {
 	background-color: blue;
 }
 #buttoncinobig {
@@ -324,6 +332,7 @@ div.desc {
 }
 .carrello, .pagamento {
 	margin: auto;
+	margin-top: 30px;
 }
 .carrello h2 {
 	text-align: center;
@@ -331,25 +340,26 @@ div.desc {
 .pagamento {
   	border: 1px solid #ccc;
 	margin-top: 50px;
+	margin-bottom: 25px;
 	background-color: white;
   	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   	margin-bottom: 25px;
 }
-.pagamento {
-	
+.pagamento h2, .rettangolicar, .buttoncinocar, .labelcar {
+	margin-left: 25%;
 }
-table, td, th .carrello{  
+.carrello table, .carrello td, .carrello th{  
 	margin-top: 20px;
   	text-align: left;
 }
-table {
+.carrello table {
  	border-collapse: collapse;
   	width: 100%;
 }
-th, td {
+.carrello th, .carrello td {
   	padding: 15px;
 }
-#rettangolicar {
+.rettangolicar {
 	width: 230px;
 	height: 35px;
 	font: 18px;
@@ -360,7 +370,7 @@ th, td {
 	margin-top: 5px;
 	margin-bottom: 3px;
 }
-#buttoncinocar {
+.buttoncinocar {
 	
 }
 
@@ -369,9 +379,10 @@ th, td {
 
 
 .scelta {
-	position: relative;
-	margin: auto;
-	display: inline-block;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 30px;
+	margin-bottom: 30px;
 }
 .button {
 	background-color: gold;
@@ -381,20 +392,20 @@ th, td {
 	border-color: tomato;
 	border-radius: 8px;
 	margin: 10px;
-	cursor: pointer;
+	cursor: pointer; 
 }
 .button:hover {
 	transition-duration: 0.4s;
 	background-color: tomato;
 	color: white;
 }
-/*.button:active {
+.active {
 	background-color: tomato;
 	color: white;
-}*/
-.registrazione, .login, .loginAdmin {
-	margin-left: auto;
-	margin-right: auto;
+}
+#registrazione, #login, #loginAdmin {
+	margin-left:auto;
+	margin-right:auto;
 }
 .rettangolilog {
 	width: 230px;
@@ -408,9 +419,8 @@ th, td {
 	margin-bottom: 3px;
 }
 .buttoncinolog {
-	background-color: tomato;
-	color: white;
-	font: 22px "Comic Sans MS", Serif;
+	background-color: gold;
+	font: 20px "Comic Sans MS", Serif;
 	border-style: inset;
 	border-width: 3px;
 	border-color: tomato;
@@ -419,13 +429,64 @@ th, td {
 	margin-bottom: 15px;
 	cursor: pointer;
 }
+.buttoncinolog:hover {
+	transition-duration: 0.4s;
+	background-color: tomato;
+	color: white;
+}
 
+/*AdminPage*/
+.tab {
+  	float: left;
+ 	border: 1px solid #ccc;
+  	background-color: #f1f1f1;
+  	width: 15%;
+  	height: 300px;
+}
+.tab button {
+  	display: block;
+  	background-color: inherit;
+  	color: black;
+  	padding: 20px 16px;
+  	width: 100%;
+  	border: none;
+  	outline: none;
+  	text-align: left;
+  	cursor: pointer;
+  	transition: 0.3s;
+  	font-size: 17px;
+}
+.tab button:hover {
+  	background-color: #ddd;
+}
+.tab button.active {
+  	background-color: #ccc;
+}
+/* Style the tab content */
+
+.tabcontent {
+  	float: left;
+  	padding: 30px 30px;
+  	width: 70%;
+  	border-left: none;
+  	height: 300px;
+}
+.tabcontent p {
+	text-transform: uppercase;
+}
+.tabcontent1 {
+  	float: left;
+  	padding: 30px 30px;
+  	width: 70%;
+  	border-left: none;
+  	height: 300px;
+}
 
 /* For mobile phones: */
 [class*="col-"] {
 	width: 100%;
 }
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 768px) {
   /* For tablets: */
   	.col-s-1 {width: 8.33%;}
   	.col-s-2 {width: 16.66%;}
@@ -440,14 +501,8 @@ th, td {
   	.col-s-11 {width: 91.66%;}
   	.col-s-12 {width: 100%;}
 }
-@media only screen and (max-width: 999px) {
-	.NavBar1 .sinistra, .dropdown .dropbtn {display: none;}
-  	.NavBar1 a.icon {float: left; display: block;}
-}
-@media only screen and (min-width: 1000px) {
-  /* For tablets: */
-  	.NavBar1 .sinistra, .dropdown .dropbtn {display: block;}
-  	.NavBar1 a.icon {float: left; display: none;}
+@media only screen and (min-width: 1024px) {
+  /* For PC: */
   	.col-1 {width: 8.33%;}
   	.col-2 {width: 16.66%;}
   	.col-3 {width: 25%;}
@@ -462,3 +517,43 @@ th, td {
   	.col-12 {width: 100%;}
 }
 
+@media screen and (max-width: 1024px) {
+	.navBar {
+		width: 55%;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.pagamento {
+  	margin-left: 30px;
+  	margin-right: 30px;
+  	}
+	body {
+		overflow-x: hidden;
+	}
+	.navBar {
+		position: absolute;
+		right: 0px;
+		height: 92vh;
+		top: 7.8vh;
+		background-color: gold;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 30%;
+		transform: translateX(100%);
+		border-bottom: 1px solid black;
+		border-left: 1px solid black;
+		box-shadow: 2px 2px 15px black;
+		/*transition: transform 0.5s ease-in;*/
+	}
+	.navBar a {
+	align-text: left;
+	}
+	.burger {
+		display: block;
+	}
+}
+.nav-active{
+	transform: translateX(0%);
+}
