--- a/Home2.css
+++ b/Home2.css
@@ -1,76 +1,77 @@
-
 * {
-  box-sizing: border-box;
+	margin: 0px;
+  	box-sizing: border-box;
+  	font-family: "Comic Sans MS", Serif;
 }
-
 body {
-	font-family: "Comic Sans MS", Serif;
-	background: rgba(191, 255, 0, 0.4);
-	margin: 0;
-	overflox-x: hidden;
+	
 }
-
-/*.tickets {
-	margin-left: 20px;
-	background: gold;
-}
-.tickets h2 {
-	color: purple;
-	font-size: 32px;
-}*/
-
 /*Nav Bar*/
 
-.NavBar1 {
-	font-size: 16px;
-	list-style-type: none;
+nav {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	min-height: 7.5vh;
 	border-bottom: 1px solid black;
 	box-shadow: 2px 2px 15px black;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
+	overflow-y: hidden;
 	background-color: gold;
-	position: sticky;
-	top: 0;
-	left: 0;
 }
-
-
-.sinistra {
-	float: left;
-	border-right: 1px solid white;
-}
-
-.destra {
-	float: right;
-	margin-right: 20px;
-}
-
-
-li a {
-	display: block;
+.logo {
 	color: black;
-	text-align: center;
-	padding: 14px 25px;
-	text-decoration: none;
+	text-transform: uppercase;
+	font-weight: bold;
+	letter-spacing: 5px;
+	font-size: 26px;
 }
-
-li a:hover:not(.active) {
+.logo a {
+	text-decoration: none;
+	color: black;
+}
+.navBar {
+	display: flex;
+	justify-content: space-around;		
+	width: 40%;
+	}
+.navBar li {
+	list-style-type: none;
+}
+.navBar a {
+	color: black;
+	text-decoration: none;
+	text-align: center;
+	letter-spacing: 3px;
+	font-weight: bold;
+	padding: 15px 18px;
+	font-size: 13px;
+}
+.navBar a:hover:not(.active) {
+	transition-duration: 0.4s;
 	background-color: tomato;
 	color: white;
 }
-
 .active {
 	background-color: tomato;
 	color: white;
 }
+.burger {
+	display: none;
+	cursor: pointer;
+	}
+.burger div{
+	width: 25px;
+	height: 3px;
+	background-color: black;
+	margin: 5px;
+}
+
 
 /*.sticky {
   position: fixed;
   top: 0;
   width: 100%;
 }
-
 .dropdown-content {
   display: none;
   position: absolute;
@@ -79,7 +80,6 @@ li a:hover:not(.active) {
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
-
 .dropdown-content a {
   	color: black;
   	padding: 12px 0px;
@@ -87,15 +87,12 @@ li a:hover:not(.active) {
   	display: block;
   	text-align: center;
 }
-
 .dropdown-content a:hover 
 {background-color: tomato;}
-
 .dropdown:hover .dropdown-content {
   display: block;
 }
-
-/*COSE NavBar*/
+/*COSE navBar*/
 
 
 
@@ -103,7 +100,6 @@ li a:hover:not(.active) {
   float: left;
   overflow: hidden;
 }
-
 .dropdown .dropbtn {
   font-size: 17px;    
   border: none;
@@ -114,7 +110,6 @@ li a:hover:not(.active) {
   font-family: inherit;
   margin: 0;
 }
-
 .dropdown-content {
   display: none;
   position: absolute;
@@ -123,7 +118,6 @@ li a:hover:not(.active) {
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
-
 .dropdown-content a {
   float: none;
   color: black;
@@ -132,50 +126,46 @@ li a:hover:not(.active) {
   display: block;
   text-align: left;
 }
-
 .topnav a:hover, .dropdown:hover .dropbtn {
   background-color: #555;
   color: white;
 }
-
 .dropdown-content a:hover {
   background-color: #ddd;
   color: black;
 }
-
 .dropdown:hover .dropdown-content {
   display: block;
 }*/
 
 /*@media screen and (max-width: 750px) {
-  .NavBar1 .sinistra, .dropdown .dropbtn {
+  .navBar .sinistra, .dropdown .dropbtn {
     display: none;
   }
-  .NavBar1 a.icon {
+  .navBar a.icon {
     float: left;
     display: block;
   }
 }
-
 @media screen and (max-width: 750px) {
-  	.NavBar1.responsive {position: relative;}
-  	.NavBar1.responsive .icon {
+  	.navBar.responsive {position: relative;}
+  	.navBar.responsive .icon {
     	position: absolute;
     	border-right: 1px solid white;
     	left: 0;
     	top: 0;
   	}
-  	.NavBar1.responsive a.sinistra {
+  	.navBar.responsive a.sinistra {
     	float: none;
     	display: block;
     	text-align: center;
   	}
-  	.NavBar1.responsive a.destra {
+  	.navBar.responsive a.destra {
 		display:none;
 	}
-  	.NavBar1.responsive .dropdown {float: none;}
-  	.NavBar1.responsive .dropdown-content {position: relative;}
-  	.NavBar1.responsive .dropdown .dropbtn {
+  	.navBar.responsive .dropdown {float: none;}
+  	.navBar.responsive .dropdown-content {position: relative;}
+  	.navBar.responsive .dropdown .dropbtn {
     	display: block;
     	width: 100%;
     	text-align: center;
@@ -184,7 +174,7 @@ li a:hover:not(.active) {
 /*Foto giganti*/
 
 .galleria-foto-giganti {
-	margin-top: 1px;
+	margin-top: 10px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -192,15 +182,11 @@ li a:hover:not(.active) {
 	max-width: 100%;
 	height: auto;
 	display: block;
+	border: 2px solid purple;
 }
-
 .scritta-nella-foto {
 	text-align: center;	
 }
-
-
-
-
 
 
 
@@ -209,52 +195,50 @@ li a:hover:not(.active) {
 
 .eventi-importanti {
 	margin: auto;
-	background-color: tomato;
 }
-
 .titolo-eventi-importanti{
 	font: 28px "Comic Sans MS", serif;
 	text-align: center;
+	margin-top: 30px;
+	margin-bottom: 30px;
 }
-
 div.galleria-foto-eventi{
 	float: left;
 }
-
+div.foto-eventi {
+	border: 1px solid #ccc;
+	margin: 10px;
+	background-color: white;
+  	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  	margin-bottom: 25px;
+}
 div.foto-eventi {
 	border: 1px solid #ccc;
 	margin: 10px;
 }
-
 div.foto-eventi:hover {
 	border: 1px solid #777;
 }
-
 div.foto-eventi img {
 	max-width: 100%;
 	height: auto;
 	object-fit: contain;
 }
 
-
-
 /*Stadi più importanti*/
 
 .stadi-importanti {
 	margin: auto;
-	background-color:yellow;
-	
 }
-
 .titolo-stadi-importanti {
 	font: 28px "Comic Sans MS", serif;
 	text-align: center;
+	margin-top: 30px;
+	margin-bottom: 30px;
 }
-
 div.galleria-foto-stadi {
 	float: left;
 }
-
 div.foto-stadi {
 	border: 1px solid #ccc;
 	margin: 10px;
@@ -262,17 +246,14 @@ div.foto-stadi {
   	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   	margin-bottom: 25px;
 }
-
 div.foto-stadi:hover {
 	border: 1px solid #777;
 }
-
 div.foto-stadi img {
 	max-width: 100%;
 	height: auto;
 	object-fit: contain;
 }
-
 div.desc {
 	text-align: center;
 }
@@ -280,21 +261,213 @@ div.desc {
 /*Footer*/
 
 .footer {
-	background-color: purple;
 	text-align: center;
 	margin-right: auto;
 	margin-left: auto;
-	color: white;
 }
 
 
+.buttoncino {
+	background-color: tomato;
+	color: white;
+	font: "Comic Sans MS", Serif;
+	text-align: center;
+	margin: 10px;
+	cursor: pointer;
+	transition-duration: 0.4s;
+}
+
+.rettangoli {
+	width: 230px;
+	height: 35px;
+	font: 18px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: tomato;
+	border-radius: 5px;
+	margin-top: 5px;
+	margin-bottom: 3px;
+}
+
+/*PageBiglietti*/
+
+.biglietti {
+	margin: auto;
+	margin-top: 30px;
+}
+.titolo-biglietti {
+	text-align: center;
+}
+#biglietti td, #biglietti th {
+	border: 1px solid grey;
+}
+#biglietti td:hover {
+	background-color: blue;
+}
+#buttoncinobig {
+	font: 14px;
+	border: 1px solid white;
+	padding: 5px 15px;
+}
+#buttoncinobig:hover {
+  	box-shadow: 0 4px 8px 0px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+/*PageCarrello*/
+
+#carrellotable th, #carrellotable td {
+	border: 1px solid #ddd;
+}
+.carrello, .pagamento {
+	margin: auto;
+	margin-top: 30px;
+}
+.carrello h2 {
+	text-align: center;
+}
+.pagamento {
+  	border: 1px solid #ccc;
+	margin-top: 50px;
+	margin-bottom: 25px;
+	background-color: white;
+  	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  	margin-bottom: 25px;
+}
+.pagamento h2, .rettangolicar, .buttoncinocar, .labelcar {
+	margin-left: 25%;
+}
+.carrello table, .carrello td, .carrello th{  
+	margin-top: 20px;
+  	text-align: left;
+}
+.carrello table {
+ 	border-collapse: collapse;
+  	width: 100%;
+}
+.carrello th, .carrello td {
+  	padding: 15px;
+}
+.rettangolicar {
+	width: 230px;
+	height: 35px;
+	font: 18px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: tomato;
+	border-radius: 5px;
+	margin-top: 5px;
+	margin-bottom: 3px;
+}
+.buttoncinocar {
+	
+}
+
+
+/*PageLogin*/
+
+
+.scelta {
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 30px;
+	margin-bottom: 30px;
+}
+.button {
+	background-color: gold;
+	font: 30px "Comic Sans MS", Serif;
+	border-style: inset;
+	border-width: 5px;
+	border-color: tomato;
+	border-radius: 8px;
+	margin: 10px;
+	cursor: pointer; 
+}
+.button:hover {
+	transition-duration: 0.4s;
+	background-color: tomato;
+	color: white;
+}
+.active {
+	background-color: tomato;
+	color: white;
+}
+#registrazione, #login, #loginAdmin {
+	margin-left:auto;
+	margin-right:auto;
+}
+.rettangolilog {
+	width: 230px;
+	height: 35px;
+	font: 18px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: tomato;
+	border-radius: 5px;
+	margin-top: 5px;
+	margin-bottom: 3px;
+}
+.buttoncinolog {
+	background-color: gold;
+	font: 20px "Comic Sans MS", Serif;
+	border-style: inset;
+	border-width: 3px;
+	border-color: tomato;
+	border-radius: 5px;
+	margin-top: 5px;
+	margin-bottom: 15px;
+	cursor: pointer;
+}
+.buttoncinolog:hover {
+	transition-duration: 0.4s;
+	background-color: tomato;
+	color: white;
+}
+
+/*AdminPage*/
+.tab {
+  	float: left;
+ 	border: 1px solid #ccc;
+  	background-color: #f1f1f1;
+  	width: 15%;
+  	height: 300px;
+}
+.tab button {
+  	display: block;
+  	background-color: inherit;
+  	color: black;
+  	padding: 20px 16px;
+  	width: 100%;
+  	border: none;
+  	outline: none;
+  	text-align: left;
+  	cursor: pointer;
+  	transition: 0.3s;
+  	font-size: 17px;
+}
+.tab button:hover {
+  	background-color: #ddd;
+}
+.tab button.active {
+  	background-color: #ccc;
+}
+/* Style the tab content */
+
+.tabcontent {
+  	float: left;
+  	padding: 30px 30px;
+  	width: 70%;
+  	border-left: none;
+  	height: 300px;
+}
+.tabcontent p {
+	text-transform: uppercase;
+}
 
 /* For mobile phones: */
 [class*="col-"] {
 	width: 100%;
 }
-
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 768px) {
   /* For tablets: */
   	.col-s-1 {width: 8.33%;}
   	.col-s-2 {width: 16.66%;}
@@ -309,15 +482,8 @@ div.desc {
   	.col-s-11 {width: 91.66%;}
   	.col-s-12 {width: 100%;}
 }
-
-@media only screen and (max-width: 999px) {
-	.NavBar1 .sinistra, .dropdown .dropbtn {display: none;}
-  	.NavBar1 a.icon {float: left; display: block;}
-}
-@media only screen and (min-width: 1000px) {
-  /* For tablets: */
-  	.NavBar1 .sinistra, .dropdown .dropbtn {display: block;}
-  	.NavBar1 a.icon {float: left; display: none;}
+@media only screen and (min-width: 1024px) {
+  /* For PC: */
   	.col-1 {width: 8.33%;}
   	.col-2 {width: 16.66%;}
   	.col-3 {width: 25%;}
@@ -332,3 +498,45 @@ div.desc {
   	.col-12 {width: 100%;}
 }
 
+@media screen and (max-width: 1024px) {
+	.navBar {
+		width: 55%;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.pagamento {
+  	margin-left: 30px;
+  	margin-right: 30px;
+  	}
+	body {
+		overflow-x: hidden;
+	}
+	.navBar {
+		position: absolute;
+		right: 0px;
+		height: 92vh;
+		top: 7.8vh;
+		background-color: gold;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 30%;
+		transform: translateX(100%);
+		border-bottom: 1px solid black;
+		border-left: 1px solid black;
+		box-shadow: 2px 2px 15px black;
+		transition: transform 0.5s ease-out;
+		
+	}
+	.navBar a {
+	align-text: left;
+	}
+	.burger {
+		display: block;
+	}
+}
+.nav-active{
+	transform: translateX(0%);
+	transition: transform 0.5s ease-in;
+}
